              the font file.

              libnetpbm font facilities: consider font invalid if a glyph is
              more than 65536 pixels high or wide.

              ppmshadow: handle images with a black background and low
              contrast images (i.e. little difference between foreground and
              background).

              pnmtopalm: fix incorrect output with certain input files and
              -packbits_compression.  Always broken.  -packbits_compression
              was new in Netpbm 10.27 (March 2005).

              libnetpbm: font facilities: fix invalid memory reference with
              certain font files.

              libnetpbm: ppm_readcolordict: Improve error message when there is
              a problem reading the color dictionary.  Affects ppmhist.

              pgmmake: Fix bug: treats non-numeric gray-level argument as zero.
              Always broken (Pgmmake was new in Netpbm 10.32, February 2006).

              pdbimgtopam, pamtopdbimg: fix various cases of incorrect output,
              some always present (programs were new in Netpbm 10.52.00
              (October 2010)).

              libnetpbm: pnm_parsecolorn(), pnm_parsecolor(): fix parsing of
              rgb: color specifications: yields value slightly too dim.
              Affects many programs.  Broken in Netpbm 10.79 (June 2017).

              Makeman: make it work with Python 3.6 II.

17.06.30 BJH  Release 10.79.00

              Add pamtable .

              pamgauss: Add -maximize, -oversample .  Thanks Anton Shepelev
              <anton.txt@gmail.com>

              pnmconvol: Extend -normalize to be applicable to convolution
              kernels specified by PGM file.  Thanks Anton Shepelev
              <anton.txt@gmail.com>

              g3topbm: tolerate fill bits.

              pbmtog3: Add -align8, -align16.

              ppmshadow: Improve results for very small maxval.
